@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 30-01-2006 fixed: Effect speed was double on some controls (select, radio, edit, toggle)
+ - 30-01-2006 fixed: Exceptions in mouse handling and in iso9660
  - 30-01-2006 fixed: focused button was not remembered sometimes (homescreen most obvious)
  - 30-01-2006 fixed: detection of invalid highlights didn't see button 0 as invalid
  - 30-01-2006 added: auto disable unsupported streams in dvdplayer
